-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0
-
None
-
Windows 7/8.1 under VMWare
MSVC 2010/2012/2013 ANGLE
-
6b31418a1b5d9be47df5ed61747e8a5fb225acfa
The latest ANGLE validates the depth/stencil format, leading to a failure to create such an FBO with some video drivers. This is the case with the VMWare tools driver, and is currently blocking CI.
To reproduce the problem, run a QML file from the qquickitemlayer test case under VMWare. The item layer (which uses an FBO) will not be rendered.